--- a/architectural-design.html
+++ b/architectural-design.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Architectural Design - Taj Design Consult</title>
+    <title>Architectural Design - Taj Design Consultancy</title>
     <link rel="stylesheet" href="service-page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
