--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Works - Taj Design Consult</title>
+    <title>Our Works - Taj Design Consultancy</title>
     <link rel="stylesheet" href="works.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
