--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Taj Design Consultancy</title>
+    <title>About Taj Design Consultancy | Our Vision & Team in Qatar</title>
+    <meta name="description" content="Learn about Taj Design Consultancy, a leading architectural and engineering firm in Qatar. Discover our values, our expert team, and our commitment to shaping Qatar's future.">
     <link rel="stylesheet" href="about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
