--- a/works.html
+++ b/works.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Works - Taj Design Consultancy</title>
-    <link rel="stylesheet" href="works.css" />
+    <title>Careers | Join Our Architectural & Engineering Team in Doha, Qatar</title>
+    <meta name="description" content="Start your career with Taj Design Consultancy, a leading firm in Qatar. We are hiring talented architects, engineers, and designers in Doha. Apply now.">
+    <link rel="stylesheet" href="careers.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/works.tsx"></script>
+    <script type="module" src="/careers.tsx"></script>
   </body>
 </html>
