--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Careers - Taj Design Consultancy</title>
+    <title>Careers | Join Our Architectural & Engineering Team in Doha, Qatar</title>
+    <meta name="description" content="Start your career with Taj Design Consultancy, a leading firm in Qatar. We are hiring talented architects, engineers, and designers in Doha. Apply now.">
     <link rel="stylesheet" href="careers.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
