--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Taj Design Consultancy</title>
+    <title>Contact Us | Taj Design Consultancy | Doha, Qatar Office</title>
+    <meta name="description" content="Contact Taj Design Consultancy in Doha, Qatar. Find our office address in Westbay, phone number, and email to discuss your next project with our expert team.">
     <link rel="stylesheet" href="contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
