--- a/architectural-design.html
+++ b/architectural-design.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Architectural Design - Taj Design Consultancy</title>
+    <title>Architectural Design Services in Doha, Qatar | Taj Design Consultancy</title>
+    <meta name="description" content="Expert architectural design services in Qatar. From concept to municipality approvals, our team delivers innovative commercial, residential, and industrial architecture.">
     <link rel="stylesheet" href="service-page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
