--- a/engineering-consultancy.html
+++ b/engineering-consultancy.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Engineering Consultancy - Taj Design Consultancy</title>
+    <title>Engineering Consultancy in Doha, Qatar | Taj Design Consultancy</title>
+    <meta name="description" content="Leading engineering consultancy in Qatar offering structural, MEP, civil, and specialized engineering solutions for projects in Doha and across the country.">
     <link rel="stylesheet" href="service-page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
