--- a/project-management.html
+++ b/project-management.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project & Construction Management - Taj Design Consultancy</title>
+    <title>Project & Construction Management in Qatar | Taj Design Consultancy</title>
+    <meta name="description" content="Expert project and construction management consultancy (PMC) in Doha, Qatar. We ensure your project is delivered on time, on budget, and to the highest standards.">
     <link rel="stylesheet" href="service-page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
