--- a/construction-approval.html
+++ b/construction-approval.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Construction Approval - Taj Design Consultancy</title>
+    <title>Construction & Building Permit Approvals in Qatar | Taj Design Consultancy</title>
+    <meta name="description" content="Expert assistance with construction approvals and building permits in Qatar. We navigate Baladiya, QCDD, Kahramaa, and Ashghal regulations for a smooth process.">
     <link rel="stylesheet" href="/service-page.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
