--- a/works.html
+++ b/works.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Projects | Architectural & Engineering Portfolio in Qatar | Taj Design Consultancy</title>
-    <meta name="description" content="Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.">
+    <title>Our Works - Taj Design Consult</title>
     <link rel="stylesheet" href="works.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
