--- a/works.html
+++ b/works.html
@@ -4,13 +4,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Works - Taj Design Consult</title>
+    <title>Our Projects | Architectural & Engineering Portfolio in Qatar | Taj Design Consultancy</title>
+    <meta name="description" content="Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.">
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <meta name="msapplication-TileColor" content="#D4AF37">
+    <meta name="theme-color" content="#111111">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.tajdc.com/works.html" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.tajdc.com/works.html">
+    <meta property="og:title" content="Our Projects | Architectural & Engineering Portfolio in Qatar | Taj Design Consultancy">
+    <meta property="og:description" content="Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.">
+    <meta property="og:image" content="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761733626/Untitled_design_-_2025-10-29T155509.760_nzctlr.png">
+    <meta property="og:site_name" content="Taj Design Consultancy">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://www.tajdc.com/works.html">
+    <meta name="twitter:title" content="Our Projects | Architectural & Engineering Portfolio in Qatar | Taj Design Consultancy">
+    <meta name="twitter:description" content="Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761733626/Untitled_design_-_2025-10-29T155509.760_nzctlr.png">
+
     <link rel="stylesheet" href="works.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Our Projects | Architectural & Engineering Portfolio in Qatar",
+      "description": "Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.",
+      "url": "https://www.tajdc.com/works.html",
+      "mainEntity": {
+        "@type": "ItemList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@type": "CreativeWork",
+              "name": "TrustLink office",
+              "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761224706/WhatsApp_Image_2025-10-22_at_23.46.06_e814e5d0_uqphxj.png"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "item": {
+              "@type": "CreativeWork",
+              "name": "World Wide Business Center",
+              "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761733626/Untitled_design_-_2025-10-29T155509.760_nzctlr.png"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "item": {
+              "@type": "CreativeWork",
+              "name": "Al Jabor Building",
+              "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761425803/Untitled_16_x_9_in_2_aypzfx.png"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "item": {
+              "@type": "CreativeWork",
+              "name": "Legal office for Shaiek Jassim Al Thani",
+              "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761394147/10_gtnarf.png"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 5,
+            "item": {
+              "@type": "CreativeWork",
+              "name": "Al Jazeera Tower",
+              "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto,w_1200/v1761637877/Untitled_16_x_9_in_13_pd7hre.png"
+            }
+          }
+        ]
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
