--- a/sustainability-energy.html
+++ b/sustainability-energy.html
@@ -11,8 +11,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <link rel="manifest" href="/manifest.webmanifest">
     <meta name="msapplication-TileColor" content="#D4AF37">
     <meta name="theme-color" content="#111111">
+
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta name="permissions-policy" content="geolocation=(), microphone=(), camera=()">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.tajdc.com/sustainability-energy.html" />
