--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <title>Leading Architectural & Engineering Consultancy in Qatar | Taj Design Consultancy</title>
     <meta name="description" content="Taj Design Consultancy is a top multidisciplinary firm in Doha, Qatar, offering expert architectural design, engineering, project management, and sustainability services.">
+    <meta name="keywords" content="top architectural firms in qatar, مكتب هندسي قطر, تصميم داخلي قطر, تصميم فلل قطر, architects in doha, carbon accounting, retrofitting services, structural engineer doha, doha famous buildings, doha qatar architecture, interior design companies in doha, interior design doha, interior designer near me, interior decorator near me, interior design near me, office interior design, architect doha, best architecture firms in qatar, house designers near me, interior ideas for living room, bedroom interior ideas, commercial interior design, architect companies in qatar, architectural design qatar">
     
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
