--- a/sustainability-energy.html
+++ b/sustainability-energy.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sustainability & Energy Consulting in Qatar | Taj Design Consultancy</title>
     <meta name="description" content="Professional sustainability and energy consulting in Doha. We help projects in Qatar meet green building standards with energy audits, retrofitting, and sustainable design.">
+    <meta name="keywords" content="top architectural firms in qatar, مكتب هندسي قطر, تصميم داخلي قطر, تصميم فلل قطر, architects in doha, carbon accounting, retrofitting services, structural engineer doha, doha famous buildings, doha qatar architecture, interior design companies in doha, interior design doha, interior designer near me, interior decorator near me, interior design near me, office interior design, architect doha, best architecture firms in qatar, house designers near me, interior ideas for living room, bedroom interior ideas, commercial interior design, architect companies in qatar, architectural design qatar">
     
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <meta name="msapplication-TileColor" content="#D4AF37">
     <meta name="theme-color" content="#111111">
