--- a/works.html
+++ b/works.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Projects | Architectural & Engineering Portfolio in Qatar | Taj Design Consultancy</title>
     <meta name="description" content="Explore the portfolio of Taj Design Consultancy, featuring landmark commercial, residential, and interior design projects across Doha and Qatar.">
+    <meta name="keywords" content="top architectural firms in qatar, مكتب هندسي قطر, تصميم داخلي قطر, تصميم فلل قطر, architects in doha, carbon accounting, retrofitting services, structural engineer doha, doha famous buildings, doha qatar architecture, interior design companies in doha, interior design doha, interior designer near me, interior decorator near me, interior design near me, office interior design, architect doha, best architecture firms in qatar, house designers near me, interior ideas for living room, bedroom interior ideas, commercial interior design, architect companies in qatar, architectural design qatar">
     
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1760896759/Blue_Bold_Office_Idea_Logo_250_x_80_px_7_uatyqd.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761893628/Untitled_design_-_2025-10-31T122254.074_heqzkj.png">
+    <link rel="manifest" href="/manifest.webmanifest">
     <meta name="msapplication-TileColor" content="#D4AF37">
     <meta name="theme-color" content="#111111">
+
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta name="permissions-policy" content="geolocation=(), microphone=(), camera=()">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.tajdc.com/works.html" />
